--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requires-python = ">=3.9"
 license = { text = "MIT" }
 
 authors = [
-  { name = "Raktim Kalita", email = "raktmxx@gmail.com" }
+  { name = "Raktim Kalita", email = "raktimkalita.ai@gmail.com" }
 ]
 
 keywords = [
@@ -127,4 +127,5 @@ ignore = ["E501"]
 
 [tool.mypy]
 ignore_missing_imports = true
+
 
